fix(p0): 修复 4 个 P0 阻断项（密钥治理/前端契约/部署编排/路由E2E+CI）
- P0-① 密钥治理：入库弱密钥清零，生产/入库路径改 ${VAR:?} 强制注入；deploy.ps1 rsync 排除 .env*；.gitignore 忽略 deploy/.env
- P0-② 前端契约：SSE 端点改为先触发真实 /api/router/route 再等待决策；网关加 consumer-service-bare 裸路由 + SSE 免鉴权白名单；前端 /api 代理与本地会话改走网关
- P0-③ 部署编排：docker-compose.deploy.yml 补齐 postgres 与容器网络变量；docker-compose.ha.yml 修正 Dockerfile 引用/PORT/Nacos 发现地址
- P0-④ 路由 E2E+CI：RouterServiceEndToEndTest 9/9 通过（评估引用的 regression2.log 为陈旧数据），接入 eval-gate.yml 的 router-e2e-gate 必需卡点
- 文档：新增 docs/project-assessment-2026-07-15.md；README 同步测试计数与 CI 卡点说明

待用户侧：轮换根 .env 真实 API Key（DEEPSEEK/DASHSCOPE/AMAP）。